fix: change deprecated URL to URI